config/k8s/otel-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  namespace: spring-app
spec:
  rules:
#   modify hosts file for working
    - host: otel-agent.minikube.com
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: otel-agent-collector
                port:
                  number: 8889
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: otel-agent-collector
                port:
                  number: 4318
